--- a/PullThatData.ipynb
+++ b/PullThatData.ipynb
@@ -210,137 +210,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'hero_id': 86, 'games_played': 116, 'wins': 59},\n",
-       " {'hero_id': 84, 'games_played': 87, 'wins': 38},\n",
-       " {'hero_id': 7, 'games_played': 84, 'wins': 45},\n",
-       " {'hero_id': 19, 'games_played': 81, 'wins': 38},\n",
-       " {'hero_id': 16, 'games_played': 73, 'wins': 40},\n",
-       " {'hero_id': 26, 'games_played': 73, 'wins': 43},\n",
-       " {'hero_id': 8, 'games_played': 72, 'wins': 39},\n",
-       " {'hero_id': 106, 'games_played': 72, 'wins': 36},\n",
-       " {'hero_id': 121, 'games_played': 70, 'wins': 25},\n",
-       " {'hero_id': 74, 'games_played': 70, 'wins': 38},\n",
-       " {'hero_id': 27, 'games_played': 65, 'wins': 29},\n",
-       " {'hero_id': 23, 'games_played': 65, 'wins': 35},\n",
-       " {'hero_id': 25, 'games_played': 62, 'wins': 29},\n",
-       " {'hero_id': 31, 'games_played': 57, 'wins': 33},\n",
-       " {'hero_id': 41, 'games_played': 57, 'wins': 29},\n",
-       " {'hero_id': 54, 'games_played': 52, 'wins': 24},\n",
-       " {'hero_id': 96, 'games_played': 49, 'wins': 23},\n",
-       " {'hero_id': 114, 'games_played': 48, 'wins': 22},\n",
-       " {'hero_id': 93, 'games_played': 47, 'wins': 20},\n",
-       " {'hero_id': 9, 'games_played': 46, 'wins': 19},\n",
-       " {'hero_id': 64, 'games_played': 46, 'wins': 22},\n",
-       " {'hero_id': 37, 'games_played': 44, 'wins': 24},\n",
-       " {'hero_id': 110, 'games_played': 44, 'wins': 29},\n",
-       " {'hero_id': 100, 'games_played': 43, 'wins': 21},\n",
-       " {'hero_id': 76, 'games_played': 41, 'wins': 21},\n",
-       " {'hero_id': 50, 'games_played': 41, 'wins': 20},\n",
-       " {'hero_id': 102, 'games_played': 39, 'wins': 19},\n",
-       " {'hero_id': 21, 'games_played': 38, 'wins': 18},\n",
-       " {'hero_id': 2, 'games_played': 38, 'wins': 21},\n",
-       " {'hero_id': 120, 'games_played': 38, 'wins': 19},\n",
-       " {'hero_id': 52, 'games_played': 37, 'wins': 18},\n",
-       " {'hero_id': 68, 'games_played': 37, 'wins': 24},\n",
-       " {'hero_id': 5, 'games_played': 36, 'wins': 19},\n",
-       " {'hero_id': 85, 'games_played': 35, 'wins': 16},\n",
-       " {'hero_id': 18, 'games_played': 34, 'wins': 13},\n",
-       " {'hero_id': 10, 'games_played': 34, 'wins': 16},\n",
-       " {'hero_id': 79, 'games_played': 34, 'wins': 17},\n",
-       " {'hero_id': 99, 'games_played': 34, 'wins': 23},\n",
-       " {'hero_id': 70, 'games_played': 34, 'wins': 17},\n",
-       " {'hero_id': 71, 'games_played': 33, 'wins': 19},\n",
-       " {'hero_id': 6, 'games_played': 32, 'wins': 19},\n",
-       " {'hero_id': 107, 'games_played': 32, 'wins': 17},\n",
-       " {'hero_id': 97, 'games_played': 30, 'wins': 9},\n",
-       " {'hero_id': 98, 'games_played': 30, 'wins': 18},\n",
-       " {'hero_id': 72, 'games_played': 30, 'wins': 15},\n",
-       " {'hero_id': 75, 'games_played': 30, 'wins': 16},\n",
-       " {'hero_id': 83, 'games_played': 29, 'wins': 14},\n",
-       " {'hero_id': 34, 'games_played': 29, 'wins': 16},\n",
-       " {'hero_id': 90, 'games_played': 29, 'wins': 15},\n",
-       " {'hero_id': 15, 'games_played': 29, 'wins': 12},\n",
-       " {'hero_id': 82, 'games_played': 29, 'wins': 11},\n",
-       " {'hero_id': 28, 'games_played': 29, 'wins': 10},\n",
-       " {'hero_id': 111, 'games_played': 28, 'wins': 11},\n",
-       " {'hero_id': 44, 'games_played': 28, 'wins': 14},\n",
-       " {'hero_id': 42, 'games_played': 28, 'wins': 11},\n",
-       " {'hero_id': 89, 'games_played': 28, 'wins': 15},\n",
-       " {'hero_id': 3, 'games_played': 27, 'wins': 9},\n",
-       " {'hero_id': 29, 'games_played': 26, 'wins': 13},\n",
-       " {'hero_id': 20, 'games_played': 26, 'wins': 10},\n",
-       " {'hero_id': 69, 'games_played': 25, 'wins': 14},\n",
-       " {'hero_id': 60, 'games_played': 25, 'wins': 9},\n",
-       " {'hero_id': 39, 'games_played': 25, 'wins': 14},\n",
-       " {'hero_id': 1, 'games_played': 25, 'wins': 14},\n",
-       " {'hero_id': 36, 'games_played': 25, 'wins': 15},\n",
-       " {'hero_id': 62, 'games_played': 24, 'wins': 8},\n",
-       " {'hero_id': 22, 'games_played': 24, 'wins': 16},\n",
-       " {'hero_id': 45, 'games_played': 24, 'wins': 12},\n",
-       " {'hero_id': 38, 'games_played': 24, 'wins': 10},\n",
-       " {'hero_id': 87, 'games_played': 23, 'wins': 9},\n",
-       " {'hero_id': 30, 'games_played': 23, 'wins': 13},\n",
-       " {'hero_id': 104, 'games_played': 23, 'wins': 12},\n",
-       " {'hero_id': 17, 'games_played': 23, 'wins': 10},\n",
-       " {'hero_id': 101, 'games_played': 23, 'wins': 18},\n",
-       " {'hero_id': 12, 'games_played': 22, 'wins': 13},\n",
-       " {'hero_id': 78, 'games_played': 22, 'wins': 12},\n",
-       " {'hero_id': 53, 'games_played': 22, 'wins': 10},\n",
-       " {'hero_id': 47, 'games_played': 21, 'wins': 8},\n",
-       " {'hero_id': 109, 'games_played': 21, 'wins': 9},\n",
-       " {'hero_id': 95, 'games_played': 21, 'wins': 15},\n",
-       " {'hero_id': 58, 'games_played': 20, 'wins': 12},\n",
-       " {'hero_id': 59, 'games_played': 20, 'wins': 11},\n",
-       " {'hero_id': 65, 'games_played': 20, 'wins': 11},\n",
-       " {'hero_id': 88, 'games_played': 20, 'wins': 10},\n",
-       " {'hero_id': 33, 'games_played': 19, 'wins': 4},\n",
-       " {'hero_id': 55, 'games_played': 19, 'wins': 11},\n",
-       " {'hero_id': 63, 'games_played': 19, 'wins': 7},\n",
-       " {'hero_id': 13, 'games_played': 19, 'wins': 7},\n",
-       " {'hero_id': 57, 'games_played': 18, 'wins': 7},\n",
-       " {'hero_id': 129, 'games_played': 18, 'wins': 9},\n",
-       " {'hero_id': 11, 'games_played': 18, 'wins': 9},\n",
-       " {'hero_id': 35, 'games_played': 18, 'wins': 9},\n",
-       " {'hero_id': 112, 'games_played': 18, 'wins': 9},\n",
-       " {'hero_id': 67, 'games_played': 17, 'wins': 11},\n",
-       " {'hero_id': 4, 'games_played': 17, 'wins': 6},\n",
-       " {'hero_id': 73, 'games_played': 17, 'wins': 6},\n",
-       " {'hero_id': 81, 'games_played': 17, 'wins': 11},\n",
-       " {'hero_id': 108, 'games_played': 16, 'wins': 8},\n",
-       " {'hero_id': 43, 'games_played': 15, 'wins': 6},\n",
-       " {'hero_id': 46, 'games_played': 15, 'wins': 12},\n",
-       " {'hero_id': 32, 'games_played': 14, 'wins': 6},\n",
-       " {'hero_id': 91, 'games_played': 14, 'wins': 8},\n",
-       " {'hero_id': 105, 'games_played': 14, 'wins': 9},\n",
-       " {'hero_id': 119, 'games_played': 14, 'wins': 8},\n",
-       " {'hero_id': 40, 'games_played': 13, 'wins': 6},\n",
-       " {'hero_id': 77, 'games_played': 12, 'wins': 2},\n",
-       " {'hero_id': 51, 'games_played': 12, 'wins': 6},\n",
-       " {'hero_id': 66, 'games_played': 12, 'wins': 7},\n",
-       " {'hero_id': 113, 'games_played': 11, 'wins': 5},\n",
-       " {'hero_id': 103, 'games_played': 11, 'wins': 8},\n",
-       " {'hero_id': 48, 'games_played': 10, 'wins': 5},\n",
-       " {'hero_id': 56, 'games_played': 9, 'wins': 5},\n",
-       " {'hero_id': 49, 'games_played': 9, 'wins': 5},\n",
-       " {'hero_id': 61, 'games_played': 9, 'wins': 3},\n",
-       " {'hero_id': 92, 'games_played': 7, 'wins': 3},\n",
-       " {'hero_id': 80, 'games_played': 7, 'wins': 3},\n",
-       " {'hero_id': 94, 'games_played': 7, 'wins': 4}]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hero 86 : win_rate 0.5086206896551724\n",
+      "Hero 84 : win_rate 0.4367816091954023\n",
+      "Hero 7 : win_rate 0.5357142857142857\n",
+      "Hero 26 : win_rate 0.589041095890411\n",
+      "Hero 8 : win_rate 0.5416666666666666\n",
+      "Hero 74 : win_rate 0.5428571428571428\n",
+      "Hero 27 : win_rate 0.4461538461538462\n",
+      "Hero 23 : win_rate 0.5384615384615384\n",
+      "Hero 25 : win_rate 0.46774193548387094\n",
+      "Hero 41 : win_rate 0.5087719298245614\n",
+      "Hero 114 : win_rate 0.4583333333333333\n",
+      "Hero 93 : win_rate 0.425531914893617\n",
+      "Hero 9 : win_rate 0.41304347826086957\n",
+      "Hero 21 : win_rate 0.47368421052631576\n",
+      "Hero 2 : win_rate 0.5526315789473685\n",
+      "Hero 5 : win_rate 0.5277777777777778\n",
+      "Hero 99 : win_rate 0.6764705882352942\n",
+      "Hero 6 : win_rate 0.59375\n",
+      "Hero 44 : win_rate 0.5\n",
+      "Hero 22 : win_rate 0.6666666666666666\n",
+      "Hero 30 : win_rate 0.5652173913043478\n",
+      "Hero 104 : win_rate 0.5217391304347826\n",
+      "Hero 101 : win_rate 0.782608695652174\n",
+      "Hero 35 : win_rate 0.5\n"
+     ]
     }
    ],
    "source": [
-    "for e in pudge_winrates"
+    "for e in pudge_winrates.json():\n",
+    "    if e['hero_id'] iicn most_popular_heroes:\n",
+    "        win_rate = e['wins'] / e['games_played']\n",
+    "        print('Hero {0} : win_rate {1}'.format(e['hero_id'], win_rate))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not many games"
    ]
   },
   {
