adding CRF library

--- a/PullThatData.ipynb
+++ b/PullThatData.ipynb
@@ -210,7 +210,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hero_id': 86, 'games_played': 116, 'wins': 59}\n",
+      "{'hero_id': 84, 'games_played': 87, 'wins': 38}\n",
+      "{'hero_id': 7, 'games_played': 84, 'wins': 45}\n",
+      "{'hero_id': 26, 'games_played': 73, 'wins': 43}\n",
+      "{'hero_id': 8, 'games_played': 72, 'wins': 39}\n",
+      "{'hero_id': 74, 'games_played': 70, 'wins': 38}\n",
+      "{'hero_id': 27, 'games_played': 65, 'wins': 29}\n",
+      "{'hero_id': 23, 'games_played': 65, 'wins': 35}\n",
+      "{'hero_id': 25, 'games_played': 62, 'wins': 29}\n",
+      "{'hero_id': 41, 'games_played': 57, 'wins': 29}\n",
+      "{'hero_id': 114, 'games_played': 48, 'wins': 22}\n",
+      "{'hero_id': 93, 'games_played': 47, 'wins': 20}\n",
+      "{'hero_id': 9, 'games_played': 46, 'wins': 19}\n",
+      "{'hero_id': 21, 'games_played': 38, 'wins': 18}\n",
+      "{'hero_id': 2, 'games_played': 38, 'wins': 21}\n",
+      "{'hero_id': 5, 'games_played': 36, 'wins': 19}\n",
+      "{'hero_id': 99, 'games_played': 34, 'wins': 23}\n",
+      "{'hero_id': 6, 'games_played': 32, 'wins': 19}\n",
+      "{'hero_id': 44, 'games_played': 28, 'wins': 14}\n",
+      "{'hero_id': 22, 'games_played': 24, 'wins': 16}\n",
+      "{'hero_id': 30, 'games_played': 23, 'wins': 13}\n",
+      "{'hero_id': 104, 'games_played': 23, 'wins': 12}\n",
+      "{'hero_id': 101, 'games_played': 23, 'wins': 18}\n",
+      "{'hero_id': 35, 'games_played': 18, 'wins': 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in pudge_winrates.json():\n",
+    "    if e['hero_id'] in most_popular_heroes:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +288,7 @@
    ],
    "source": [
     "for e in pudge_winrates.json():\n",
-    "    if e['hero_id'] iicn most_popular_heroes:\n",
+    "    if e['hero_id'] in most_popular_heroes:\n",
     "        win_rate = e['wins'] / e['games_played']\n",
     "        print('Hero {0} : win_rate {1}'.format(e['hero_id'], win_rate))"
    ]
@@ -255,7 +297,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not many games"
+    "Not many games to capture win rate. And these games aren't exclusively limited to our limited hero set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The better idea is to parse through a bunch of matches, filter out the ones that include any non-negative number of heroes not in the list above, and then calculate win rates from that.\n",
+    "\n",
+    "In addition, we would then calculate new baseline popularity rate from this set of matches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's pretend we have the data. What CRF library do we use?\n",
+    "\n",
+    "Let's try: https://github.com/scrapinghub/python-crfsuite"
    ]
   },
   {
