changing crf system

--- a/PullThatData.ipynb
+++ b/PullThatData.ipynb
@@ -329,7 +329,19 @@
    "source": [
     "# Let's pretend we have the data. What CRF library do we use?\n",
     "\n",
-    "Let's try: https://github.com/scrapinghub/python-crfsuite"
+    "Let's try: https://pystruct.github.io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy as sci\n",
+    "import sklearn as sk\n",
+    "import pycrfsuite as pcs"
    ]
   },
   {
