ready to mess around

--- a/PullThatData.ipynb
+++ b/PullThatData.ipynb
@@ -334,14 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy as sci\n",
     "import sklearn as sk\n",
-    "import pycrfsuite as pcs"
+    "import pystruct"
    ]
   },
   {
