--- a/PlayingAround.ipynb
+++ b/PlayingAround.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,14 @@
      "output_type": "stream",
      "text": [
       "Please be patient. Learning will take 5-20 minutes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nabeel/anaconda3/envs/nyu/lib/python3.6/site-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
      ]
     }
    ],
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +117,7 @@
        "       [0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +137,7 @@
        "200"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +157,7 @@
        "200"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +179,7 @@
        "       1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +269,7 @@
        "       [35, 41]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +289,7 @@
        "(7, 6)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +311,7 @@
        "        0,  0,  0,  0,  0,  0,  0,  0], dtype=uint8)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +337,7 @@
        "       [ 0,  0,  0,  0,  0,  0]], dtype=uint8)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +357,7 @@
        "(7, 6, 5)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +424,7 @@
        "        [0, 0, 0, 1, 0]]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +444,7 @@
        "(7, 6, 5)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +464,7 @@
        "(7, 6)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +484,7 @@
        "array([0, 0, 0, 1, 0])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +504,7 @@
        "(42, 45)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +524,7 @@
        "(42, 45)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +544,7 @@
        "(71, 2)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +634,7 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,16 +645,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(71, 180)"
+       "(71, 90)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +674,7 @@
        "2"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +700,7 @@
        "       [ 0,  0,  0,  0,  0,  0]], dtype=uint8)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +720,7 @@
        "4.0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +749,7 @@
        "(42, 45)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,16 +760,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7, 6, 5)"
+       "array([[[0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 1, 0],\n",
+       "        [0, 0, 1, 0, 0],\n",
+       "        [0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 1, 0],\n",
+       "        [1, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0],\n",
+       "        [0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 1, 0, 0],\n",
+       "        [0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1],\n",
+       "        [0, 0, 0, 1, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0]]])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +870,7 @@
        "       [40, 41]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +899,7 @@
        "(71, 2)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +919,7 @@
        "(71, 90)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +944,7 @@
        "       0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,10 +955,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(42,)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_train[0].ravel().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 0], dtype=uint8)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack([y.ravel() for y in Y_train])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(np.unique(np.hstack([y.ravel() for y in Y])))"
+   ]
   }
  ],
  "metadata": {
