data is pushed and pulled

--- a/PullThatData.ipynb
+++ b/PullThatData.ipynb
@@ -464,7 +464,9 @@
    "source": [
     "The better idea is to parse through a bunch of matches, filter out the ones that include any non-negative number of heroes not in the list above, and then calculate win rates from that.\n",
     "\n",
-    "In addition, we would then calculate new baseline popularity rate from this set of matches."
+    "In addition, we would then calculate new baseline popularity rate from this set of matches.\n",
+    "\n",
+    "Use Stratz API since it doesn't limit our data rates as much."
    ]
   },
   {
@@ -1236,13 +1238,6 @@
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Use Stratz API to get the data we need. It doesn't limit you per month. Only per hour. Use OpenDota API to get matches."
    ]
   },
   {
