--- a/BuildThatModel.ipynb
+++ b/BuildThatModel.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +101,248 @@
     "                win_rate.append(-1)\n",
     "        X_feature.append(win_rate)\n",
     "        \n",
-    "        popularity = [popularityDict[hero] for hero in x]\n",
-    "        X_feature = np.concatenate((X_feature, popularity))\n",
+    "        #popularity = [popularityDict[hero] for hero in x]\n",
+    "        #X_feature = np.concatenate((X_feature, popularity))\n",
     "    X_features.append(X_feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.4012345679012346,\n",
+       "  0.4392523364485981,\n",
+       "  0.45,\n",
+       "  0.4431818181818182,\n",
+       "  0.45977011494252873,\n",
+       "  -1,\n",
+       "  0.4507042253521127,\n",
+       "  0.4666666666666667,\n",
+       "  0.35714285714285715,\n",
+       "  0.44776119402985076,\n",
+       "  0.323943661971831,\n",
+       "  0.35294117647058826,\n",
+       "  0.45161290322580644,\n",
+       "  0.4444444444444444,\n",
+       "  0.43902439024390244,\n",
+       "  0.45098039215686275,\n",
+       "  -1,\n",
+       "  0.4098360655737705,\n",
+       "  -1,\n",
+       "  0.359375,\n",
+       "  0.43243243243243246,\n",
+       "  0.4523809523809524,\n",
+       "  -1,\n",
+       "  0.4576271186440678,\n",
+       "  -1,\n",
+       "  0.21621621621621623,\n",
+       "  0.4,\n",
+       "  0.3076923076923077,\n",
+       "  0.53125,\n",
+       "  0.2777777777777778,\n",
+       "  0.5,\n",
+       "  0.375,\n",
+       "  0.5531914893617021,\n",
+       "  0.3225806451612903,\n",
+       "  0.3225806451612903,\n",
+       "  0.36585365853658536,\n",
+       "  0.40476190476190477,\n",
+       "  0.5555555555555556,\n",
+       "  0.29411764705882354,\n",
+       "  0.4878048780487805,\n",
+       "  0.46153846153846156,\n",
+       "  0.5,\n",
+       "  0.45161290322580644,\n",
+       "  0.39285714285714285],\n",
+       " [0.48717948717948717,\n",
+       "  0.5882352941176471,\n",
+       "  0.45652173913043476,\n",
+       "  0.5730337078651685,\n",
+       "  0.5443037974683544,\n",
+       "  -1,\n",
+       "  0.532258064516129,\n",
+       "  0.5,\n",
+       "  0.4864864864864865,\n",
+       "  0.3958333333333333,\n",
+       "  0.45901639344262296,\n",
+       "  0.5853658536585366,\n",
+       "  0.4482758620689655,\n",
+       "  0.559322033898305,\n",
+       "  0.5384615384615384,\n",
+       "  0.5454545454545454,\n",
+       "  -1,\n",
+       "  0.4772727272727273,\n",
+       "  -1,\n",
+       "  0.4406779661016949,\n",
+       "  0.53125,\n",
+       "  0.5106382978723404,\n",
+       "  -1,\n",
+       "  0.589041095890411,\n",
+       "  -1,\n",
+       "  0.6170212765957447,\n",
+       "  0.46153846153846156,\n",
+       "  0.3673469387755102,\n",
+       "  0.6829268292682927,\n",
+       "  0.5,\n",
+       "  0.5609756097560976,\n",
+       "  0.5208333333333334,\n",
+       "  0.6829268292682927,\n",
+       "  0.5185185185185185,\n",
+       "  0.13636363636363635,\n",
+       "  0.4666666666666667,\n",
+       "  0.5172413793103449,\n",
+       "  0.5,\n",
+       "  0.5333333333333333,\n",
+       "  0.6486486486486487,\n",
+       "  0.2727272727272727,\n",
+       "  0.48148148148148145,\n",
+       "  0.34615384615384615,\n",
+       "  0.5454545454545454],\n",
+       " [0.5093167701863354,\n",
+       "  0.5784313725490197,\n",
+       "  0.47191011235955055,\n",
+       "  0.45121951219512196,\n",
+       "  0.5555555555555556,\n",
+       "  -1,\n",
+       "  0.6724137931034483,\n",
+       "  0.5340909090909091,\n",
+       "  0.44642857142857145,\n",
+       "  0.4642857142857143,\n",
+       "  0.45161290322580644,\n",
+       "  0.53125,\n",
+       "  0.4727272727272727,\n",
+       "  0.5,\n",
+       "  0.5625,\n",
+       "  0.5,\n",
+       "  -1,\n",
+       "  0.3939393939393939,\n",
+       "  -1,\n",
+       "  0.4155844155844156,\n",
+       "  0.5333333333333333,\n",
+       "  0.38,\n",
+       "  -1,\n",
+       "  0.425,\n",
+       "  -1,\n",
+       "  0.4375,\n",
+       "  0.45652173913043476,\n",
+       "  0.3170731707317073,\n",
+       "  0.5172413793103449,\n",
+       "  0.35714285714285715,\n",
+       "  0.4722222222222222,\n",
+       "  0.6222222222222222,\n",
+       "  0.6136363636363636,\n",
+       "  0.56,\n",
+       "  0.3469387755102041,\n",
+       "  0.5294117647058824,\n",
+       "  0.65625,\n",
+       "  0.16666666666666666,\n",
+       "  0.2,\n",
+       "  0.5952380952380952,\n",
+       "  0.6666666666666666,\n",
+       "  0.45161290322580644,\n",
+       "  0.631578947368421,\n",
+       "  0.35714285714285715],\n",
+       " [0.484304932735426,\n",
+       "  0.5645161290322581,\n",
+       "  0.4744525547445255,\n",
+       "  0.504424778761062,\n",
+       "  0.45081967213114754,\n",
+       "  -1,\n",
+       "  0.5445544554455446,\n",
+       "  0.4943820224719101,\n",
+       "  0.44642857142857145,\n",
+       "  0.47058823529411764,\n",
+       "  0.43,\n",
+       "  0.5352112676056338,\n",
+       "  0.5054945054945055,\n",
+       "  0.5166666666666667,\n",
+       "  0.4810126582278481,\n",
+       "  0.4788732394366197,\n",
+       "  -1,\n",
+       "  0.5063291139240507,\n",
+       "  -1,\n",
+       "  0.5108695652173914,\n",
+       "  0.589041095890411,\n",
+       "  0.5384615384615384,\n",
+       "  -1,\n",
+       "  0.5833333333333334,\n",
+       "  -1,\n",
+       "  0.5263157894736842,\n",
+       "  0.5660377358490566,\n",
+       "  0.32727272727272727,\n",
+       "  0.46808510638297873,\n",
+       "  0.36363636363636365,\n",
+       "  0.46808510638297873,\n",
+       "  0.5194805194805194,\n",
+       "  0.5333333333333333,\n",
+       "  0.4318181818181818,\n",
+       "  0.5098039215686274,\n",
+       "  0.5641025641025641,\n",
+       "  0.6304347826086957,\n",
+       "  0.4444444444444444,\n",
+       "  0.4838709677419355,\n",
+       "  0.46296296296296297,\n",
+       "  0.0,\n",
+       "  0.42105263157894735,\n",
+       "  0.36585365853658536,\n",
+       "  0.4634146341463415],\n",
+       " [0.4230769230769231,\n",
+       "  0.4854368932038835,\n",
+       "  0.4090909090909091,\n",
+       "  0.5,\n",
+       "  0.546875,\n",
+       "  -1,\n",
+       "  0.56,\n",
+       "  0.5147058823529411,\n",
+       "  0.5076923076923077,\n",
+       "  0.48148148148148145,\n",
+       "  0.4523809523809524,\n",
+       "  0.37209302325581395,\n",
+       "  0.4411764705882353,\n",
+       "  0.43902439024390244,\n",
+       "  0.6590909090909091,\n",
+       "  0.5306122448979592,\n",
+       "  -1,\n",
+       "  0.5952380952380952,\n",
+       "  -1,\n",
+       "  0.45652173913043476,\n",
+       "  0.48717948717948717,\n",
+       "  0.4318181818181818,\n",
+       "  -1,\n",
+       "  0.44680851063829785,\n",
+       "  -1,\n",
+       "  0.4090909090909091,\n",
+       "  0.5,\n",
+       "  0.375,\n",
+       "  0.35294117647058826,\n",
+       "  0.391304347826087,\n",
+       "  0.43243243243243246,\n",
+       "  0.35714285714285715,\n",
+       "  0.5151515151515151,\n",
+       "  0.5294117647058824,\n",
+       "  0.4444444444444444,\n",
+       "  0.35,\n",
+       "  0.34615384615384615,\n",
+       "  0.4444444444444444,\n",
+       "  0.5769230769230769,\n",
+       "  0.52,\n",
+       "  0.5,\n",
+       "  0.21428571428571427,\n",
+       "  0.4375,\n",
+       "  0.5161290322580645]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_features[0]"
    ]
   },
   {
