--- a/PlayingAround.ipynb
+++ b/PlayingAround.ipynb
@@ -995,24 +995,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-790e80a91a39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Y' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]]), array([[ 0,  1],\n",
+       "        [ 1,  2],\n",
+       "        [ 2,  3],\n",
+       "        [ 3,  4],\n",
+       "        [ 4,  5],\n",
+       "        [ 6,  7],\n",
+       "        [ 7,  8],\n",
+       "        [ 8,  9],\n",
+       "        [ 9, 10],\n",
+       "        [10, 11],\n",
+       "        [12, 13],\n",
+       "        [13, 14],\n",
+       "        [14, 15],\n",
+       "        [15, 16],\n",
+       "        [16, 17],\n",
+       "        [18, 19],\n",
+       "        [19, 20],\n",
+       "        [20, 21],\n",
+       "        [21, 22],\n",
+       "        [22, 23],\n",
+       "        [24, 25],\n",
+       "        [25, 26],\n",
+       "        [26, 27],\n",
+       "        [27, 28],\n",
+       "        [28, 29],\n",
+       "        [30, 31],\n",
+       "        [31, 32],\n",
+       "        [32, 33],\n",
+       "        [33, 34],\n",
+       "        [34, 35],\n",
+       "        [36, 37],\n",
+       "        [37, 38],\n",
+       "        [38, 39],\n",
+       "        [39, 40],\n",
+       "        [40, 41],\n",
+       "        [ 0,  6],\n",
+       "        [ 1,  7],\n",
+       "        [ 2,  8],\n",
+       "        [ 3,  9],\n",
+       "        [ 4, 10],\n",
+       "        [ 5, 11],\n",
+       "        [ 6, 12],\n",
+       "        [ 7, 13],\n",
+       "        [ 8, 14],\n",
+       "        [ 9, 15],\n",
+       "        [10, 16],\n",
+       "        [11, 17],\n",
+       "        [12, 18],\n",
+       "        [13, 19],\n",
+       "        [14, 20],\n",
+       "        [15, 21],\n",
+       "        [16, 22],\n",
+       "        [17, 23],\n",
+       "        [18, 24],\n",
+       "        [19, 25],\n",
+       "        [20, 26],\n",
+       "        [21, 27],\n",
+       "        [22, 28],\n",
+       "        [23, 29],\n",
+       "        [24, 30],\n",
+       "        [25, 31],\n",
+       "        [26, 32],\n",
+       "        [27, 33],\n",
+       "        [28, 34],\n",
+       "        [29, 35],\n",
+       "        [30, 36],\n",
+       "        [31, 37],\n",
+       "        [32, 38],\n",
+       "        [33, 39],\n",
+       "        [34, 40],\n",
+       "        [35, 41]]), array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(np.unique(np.hstack([y.ravel() for y in Y])))"
+    "X_train_edge_features[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
