forgot to write some files

--- a/PullThatData.ipynb
+++ b/PullThatData.ipynb
@@ -1546,11 +1546,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "popularity"
+    "len(popularityDict)\n",
+    "\n",
+    "with open('data/popularityDict.pkl', 'wb') as f:\n",
+    "    pickle.dump(popularityDict, f)"
    ]
   },
   {
