--- a/BuildThatModel.ipynb
+++ b/BuildThatModel.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,12 @@
     "    X_no_features_df = pickle.load(f)\n",
     "\n",
     "with open('data/Y_df.pkl', 'rb') as f:\n",
-    "    Y_df = pickle.load(f)"
+    "    Y_df = pickle.load(f)\n",
+    "\n",
+    "with open('data/pairwise_hero_win_percentage.pkl', 'rb') as f:\n",
+    "    pairwise_hero_win_percentage = pickle.load(f)\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -357,14 +362,14 @@
     "         [1, 2], [1, 3], [1, 4],\n",
     "         [2, 3], [2, 4],\n",
     "         [3, 4]]\n",
-    "for X_feature in X_features:\n",
-    "    edge_features = []\n",
-    "    for index, edge in enumerate(edges):\n",
-    "        node1 = edge[0]\n",
-    "        node2 = edge[1]\n",
-    "        edge_feature = np.concatenate((X_feature[node1], X_feature[node2]))\n",
-    "        edge_features.append(edge_feature)\n",
-    "    X_edge_features.append(edge_features)"
+    "#for X_feature in X_features:\n",
+    "#    edge_features = []\n",
+    "#    for index, edge in enumerate(edges):\n",
+    "#        node1 = edge[0]\n",
+    "#        node2 = edge[1]\n",
+    "#        edge_feature = np.concatenate((X_feature[node1], X_feature[node2]))\n",
+    "#        edge_features.append(edge_feature)\n",
+    "#    X_edge_features.append(edge_features)"
    ]
   },
   {
