update pairwise featurization

--- a/BuildThatModel.ipynb
+++ b/BuildThatModel.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +78,12 @@
     "    Y_df = pickle.load(f)\n",
     "\n",
     "with open('data/pairwise_hero_win_percentage.pkl', 'rb') as f:\n",
-    "    pairwise_hero_win_percentage = pickle.load(f)\n",
-    "    \n",
-    "    "
+    "    pairwise_hero_win_percentage = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +339,7 @@
        "  0.5161290322580645]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,9 +372,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "X_edge_features = []\n",
+    "for X_no_feature in X_no_features_df:\n",
+    "    edge_features = []\n",
+    "    for index, edge in enumerate(edges):\n",
+    "        edge_feature = []\n",
+    "        \n",
+    "        node1 = edge[0]\n",
+    "        node2 = edge[1]\n",
+    "        #edge_feature = np.concatenate((X_feature[node1], X_feature[node2]))\n",
+    "        #edge_features.append(edge_feature)\n",
+    "    #X_edge_features.append(edge_features)\n",
+    "    \n",
+    "        hero1 = X_no_feature[node1]\n",
+    "        hero2 = X_no_feature[node2]\n",
+    "        if hero1 < hero2:\n",
+    "            pass\n",
+    "        else:\n",
+    "            temp = hero2\n",
+    "            hero2 = hero1\n",
+    "            hero1 = temp\n",
+    "        \n",
+    "        for inner_hero_pair in sorted(pairwise_hero_win_percentage.keys()):\n",
+    "            outer_hero_pair = str(hero1) + \",\" + str(hero2)\n",
+    "            try:\n",
+    "                edge_feature.append( pairwise_hero_win_percentage[outer_hero_pair][inner_hero_pair])\n",
+    "            except:\n",
+    "                edge_feature.append( defaultValue )\n",
+    "        \n",
+    "        edge_features.append(edge_feature)\n",
+    "    X_edge_features.append(edge_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-22c650ab615c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m X_train_edge_features = np.array( [(np.array(X_features[i]), np.array(edges), np.array(X_edge_features[i]) ) \\\n\u001b[0;32m----> 2\u001b[0;31m                                    for i in range(len(X_no_features_df))] )\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-22c650ab615c>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m X_train_edge_features = np.array( [(np.array(X_features[i]), np.array(edges), np.array(X_edge_features[i]) ) \\\n\u001b[0;32m----> 2\u001b[0;31m                                    for i in range(len(X_no_features_df))] )\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "X_train_edge_features = np.array( [(np.array(X_features[i]), np.array(edges), np.array(X_edge_features[i]) ) \\\n",
     "                                   for i in range(len(X_no_features_df))] )"
