examples of matches

--- a/BuildThatModel.ipynb
+++ b/BuildThatModel.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "32"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "(5, 32)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,11 +349,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "Y = [[most_popular_heroes.index(i) for i in y] for y in Y_df]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pystruct.learners import OneSlackSSVM, FrankWolfeSSVM\n",
+    "from pystruct.datasets import load_snakes\n",
+    "from pystruct.utils import make_grid_edges, edge_list_to_features\n",
+    "from pystruct.models import EdgeFeatureGraphCRF\n",
+    "import time\n",
+    "\n",
+    "inference = 'qpbo'"
    ]
   },
   {
@@ -371,13 +386,6 @@
     }
    ],
    "source": [
-    "from pystruct.learners import OneSlackSSVM, FrankWolfeSSVM\n",
-    "from pystruct.datasets import load_snakes\n",
-    "from pystruct.utils import make_grid_edges, edge_list_to_features\n",
-    "from pystruct.models import EdgeFeatureGraphCRF\n",
-    "import time\n",
-    "\n",
-    "inference = 'qpbo'\n",
     "# first, train on X with directions only:\n",
     "\n",
     "X_train = X_train_edge_features[:300]\n",
@@ -412,14 +420,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#with open('models/OneSlackSSVM.pkl', 'rb') as f:\n",
+    "    #ssvm = pickle.load(ssvm, f)\n",
+    "    \n",
+    "with open('models/FrankWolfeSSVM.pkl', 'rb') as f:\n",
+    "    FWssvm = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OneSlackSSVM Score:  0.07457627118644068\n",
       "FrankWolfeSSVM Score:  0.061016949152542375\n"
      ]
     }
@@ -431,80 +458,280 @@
     "X_heroes = X_no_features_df[300:]\n",
     "Y_test = np.array( Y[300:] )\n",
     "\n",
-    "Y_pred = ssvm.predict(X_test)\n",
-    "test_score = accuracy_score(np.hstack(Y_test), np.hstack(Y_pred))\n",
+    "#Y_pred = ssvm.predict(X_test)\n",
+    "#test_score = accuracy_score(np.hstack(Y_test), np.hstack(Y_pred))\n",
     "\n",
     "Y_pred_FW = FWssvm.predict(X_test)\n",
     "test_score_FW = accuracy_score(np.hstack(Y_test), np.hstack(Y_pred_FW))\n",
-    "print(\"OneSlackSSVM Score: \", test_score)\n",
+    "#print(\"OneSlackSSVM Score: \", test_score)\n",
     "print(\"FrankWolfeSSVM Score: \", test_score_FW)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "n =  0\n",
+      "x team:\t\t ['slark', 'zeus', 'juggernaut', 'silencer', 'monkey king']\n",
+      "Y actual:\t ['pudge', 'invoker', 'lion', 'riki', 'earthshaker']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['phantom_assassin', 'invoker', 'crystal_maiden', 'lion', 'pudge']\n",
+      "\n",
+      "n =  1\n",
+      "x team:\t\t ['drow_ranger', 'windrunner / windranger', 'mirana', 'crystal_maiden', 'ogre_magi']\n",
+      "Y actual:\t ['faceless_void', 'sniper', 'axe', 'zeus', 'shadow shaman']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['sniper', 'bristleback', 'skywrath_mage', 'lion', 'witch_doctor']\n",
+      "\n",
+      "n =  2\n",
+      "x team:\t\t ['kunkka', 'faceless_void', 'invoker', 'mirana', 'ogre_magi']\n",
+      "Y actual:\t ['skywrath_mage', 'phantom_assassin', 'lina', 'axe', 'riki']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['faceless_void', 'riki', 'silencer', 'pudge', 'dazzle']\n",
+      "\n",
+      "n =  3\n",
+      "x team:\t\t ['faceless_void', 'silencer', 'legion_commander', 'crystal_maiden', 'zeus']\n",
+      "Y actual:\t ['slark', 'invoker', 'earthshaker', 'lion', 'rubick']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['sniper', 'anti mage', 'pudge', 'earthshaker', 'rubick']\n",
+      "\n",
+      "n =  4\n",
+      "x team:\t\t ['invoker', 'faceless_void', 'skywrath_mage', 'dazzle', 'skeletonking/wraithking']\n",
+      "Y actual:\t ['sniper', 'axe', 'pudge', 'phantom_assassin', 'shadow shaman']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['axe', 'slark', 'earthshaker', 'lion', 'rubick']\n",
+      "\n",
+      "n =  5\n",
+      "x team:\t\t ['lina', 'sniper', 'faceless_void', 'shadow shaman', 'lion']\n",
+      "Y actual:\t ['legion_commander', 'earthshaker', 'pudge', 'mirana', 'rubick']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['tinker', 'bristleback', 'skywrath_mage', 'slark', 'ogre_magi']\n",
+      "\n",
+      "n =  6\n",
+      "x team:\t\t ['windrunner / windranger', 'skywrath_mage', 'phantom_assassin', 'earthshaker', 'shadow shaman']\n",
+      "Y actual:\t ['axe', 'invoker', 'riki', 'rubick', 'pudge']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['faceless_void', 'mirana', 'zeus', 'riki', 'ogre_magi']\n",
+      "\n",
+      "n =  7\n",
+      "x team:\t\t ['invoker', 'drow_ranger', 'pudge', 'legion_commander', 'rubick']\n",
+      "Y actual:\t ['lion', 'phantom_assassin', 'axe', 'skywrath_mage', 'ogre_magi']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['kunkka', 'phantom_assassin', 'mirana', 'axe', 'ogre_magi']\n",
+      "\n",
+      "n =  8\n",
+      "x team:\t\t ['windrunner / windranger', 'slark', 'invoker', 'lion', 'pudge']\n",
+      "Y actual:\t ['sniper', 'anti mage', 'zeus', 'silencer', 'earthshaker']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['kunkka', 'invoker', 'mirana', 'lina', 'silencer']\n",
+      "\n",
+      "n =  9\n",
+      "x team:\t\t ['skywrath_mage', 'slark', 'ogre_magi', 'legion_commander', 'pudge']\n",
+      "Y actual:\t ['invoker', 'skeletonking/wraithking', 'monkey king', 'keeper of the light', 'rubick']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['sniper', 'axe', 'bristleback', 'silencer', 'lion']\n",
+      "\n",
+      "n =  10\n",
+      "x team:\t\t ['skywrath_mage', 'legion_commander', 'anti mage', 'crystal_maiden', 'lion']\n",
+      "Y actual:\t ['phantom_assassin', 'zeus', 'lina', 'skeletonking/wraithking', 'dazzle']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['monkey king', 'skeletonking/wraithking', 'crystal_maiden', 'pudge', 'skywrath_mage']\n",
+      "\n",
+      "n =  11\n",
+      "x team:\t\t ['juggernaut', 'ogre_magi', 'tinker', 'earthshaker', 'rubick']\n",
+      "Y actual:\t ['anti mage', 'zeus', 'pudge', 'legion_commander', 'lion']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['drow_ranger', 'earthshaker', 'invoker', 'riki', 'keeper of the light']\n",
+      "\n",
+      "n =  12\n",
+      "x team:\t\t ['phantom_assassin', 'zeus', 'ogre_magi', 'crystal_maiden', 'lina']\n",
+      "Y actual:\t ['invoker', 'riki', 'faceless_void', 'pudge', 'skywrath_mage']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['silencer', 'drow_ranger', 'pudge', 'skywrath_mage', 'mirana']\n",
+      "\n",
+      "n =  13\n",
+      "x team:\t\t ['sniper', 'zeus', 'keeper of the light', 'legion_commander', 'rubick']\n",
+      "Y actual:\t ['faceless_void', 'skeletonking/wraithking', 'tinker', 'lion', 'silencer']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['juggernaut', 'invoker', 'bristleback', 'rubick', 'crystal_maiden']\n",
+      "\n",
+      "n =  14\n",
+      "x team:\t\t ['windrunner / windranger', 'juggernaut', 'phantom_assassin', 'skywrath_mage', 'dazzle']\n",
+      "Y actual:\t ['sniper', 'pudge', 'slark', 'keeper of the light', 'lina']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['faceless_void', 'invoker', 'silencer', 'mirana', 'ogre_magi']\n",
+      "\n",
+      "n =  15\n",
+      "x team:\t\t ['riki', 'kunkka', 'juggernaut', 'windrunner / windranger', 'witch_doctor']\n",
+      "Y actual:\t ['pudge', 'phantom_assassin', 'invoker', 'silencer', 'crystal_maiden']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['phantom_assassin', 'sniper', 'mirana', 'pudge', 'shadow shaman']\n",
+      "\n",
+      "n =  16\n",
+      "x team:\t\t ['tinker', 'faceless_void', 'skeletonking/wraithking', 'zeus', 'lion']\n",
+      "Y actual:\t ['pudge', 'juggernaut', 'ogre_magi', 'axe', 'witch_doctor']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['pudge', 'bristleback', 'drow_ranger', 'skywrath_mage', 'zeus']\n",
+      "\n",
+      "n =  17\n",
+      "x team:\t\t ['drow_ranger', 'mirana', 'pudge', 'earthshaker', 'riki']\n",
+      "Y actual:\t ['phantom_assassin', 'zeus', 'axe', 'legion_commander', 'dazzle']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['faceless_void', 'silencer', 'axe', 'legion_commander', 'ogre_magi']\n",
+      "\n",
+      "n =  18\n",
+      "x team:\t\t ['drow_ranger', 'lina', 'windrunner / windranger', 'zeus', 'silencer']\n",
+      "Y actual:\t ['faceless_void', 'invoker', 'legion_commander', 'pudge', 'lion']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['monkey king', 'tinker', 'ogre_magi', 'shadow shaman', 'faceless_void']\n",
+      "\n",
+      "n =  19\n",
+      "x team:\t\t ['skeletonking/wraithking', 'lion', 'juggernaut', 'dazzle', 'windrunner / windranger']\n",
+      "Y actual:\t ['sniper', 'drow_ranger', 'axe', 'shadow shaman', 'lina']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['monkey king', 'riki', 'crystal_maiden', 'zeus', 'rubick']\n",
+      "\n",
       "n =  20\n",
       "x team:\t\t ['windrunner / windranger', 'faceless_void', 'shadow shaman', 'witch_doctor', 'keeper of the light']\n",
       "Y actual:\t ['sniper', 'phantom_assassin', 'bristleback', 'crystal_maiden', 'pudge']\n",
-      "OneSlackSSVM\n",
-      "Y predicted:\t ['skeletonking/wraithking', 'kunkka', 'invoker', 'phantom_assassin', 'pudge']\n",
       "FrankWolfeSSVM\n",
       "Y predicted:\t ['pudge', 'silencer', 'skywrath_mage', 'juggernaut', 'earthshaker']\n",
       "\n",
       "n =  21\n",
       "x team:\t\t ['invoker', 'legion_commander', 'juggernaut', 'pudge', 'silencer']\n",
       "Y actual:\t ['anti mage', 'phantom_assassin', 'earthshaker', 'ogre_magi', 'lion']\n",
-      "OneSlackSSVM\n",
-      "Y predicted:\t ['anti mage', 'ogre_magi', 'monkey king', 'skywrath_mage', 'legion_commander']\n",
       "FrankWolfeSSVM\n",
       "Y predicted:\t ['kunkka', 'axe', 'pudge', 'phantom_assassin', 'keeper of the light']\n",
       "\n",
       "n =  22\n",
       "x team:\t\t ['tinker', 'slark', 'bristleback', 'rubick', 'lion']\n",
       "Y actual:\t ['lina', 'juggernaut', 'pudge', 'ogre_magi', 'legion_commander']\n",
-      "OneSlackSSVM\n",
-      "Y predicted:\t ['invoker', 'faceless_void', 'earthshaker', 'lion', 'pudge']\n",
       "FrankWolfeSSVM\n",
       "Y predicted:\t ['axe', 'anti mage', 'zeus', 'silencer', 'shadow shaman']\n",
       "\n",
       "n =  23\n",
       "x team:\t\t ['faceless_void', 'axe', 'ogre_magi', 'invoker', 'crystal_maiden']\n",
       "Y actual:\t ['pudge', 'slark', 'lion', 'dazzle', 'legion_commander']\n",
-      "OneSlackSSVM\n",
-      "Y predicted:\t ['silencer', 'lion', 'skywrath_mage', 'juggernaut', 'earthshaker']\n",
       "FrankWolfeSSVM\n",
       "Y predicted:\t ['invoker', 'skeletonking/wraithking', 'pudge', 'legion_commander', 'ogre_magi']\n",
       "\n",
       "n =  24\n",
       "x team:\t\t ['skywrath_mage', 'slark', 'windrunner / windranger', 'lion', 'mirana']\n",
       "Y actual:\t ['faceless_void', 'invoker', 'kunkka', 'dazzle', 'pudge']\n",
-      "OneSlackSSVM\n",
-      "Y predicted:\t ['faceless_void', 'pudge', 'mirana', 'shadow shaman', 'invoker']\n",
       "FrankWolfeSSVM\n",
       "Y predicted:\t ['invoker', 'mirana', 'ogre_magi', 'silencer', 'skeletonking/wraithking']\n",
+      "\n",
+      "n =  25\n",
+      "x team:\t\t ['tinker', 'slark', 'skeletonking/wraithking', 'pudge', 'crystal_maiden']\n",
+      "Y actual:\t ['phantom_assassin', 'axe', 'zeus', 'rubick', 'ogre_magi']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['sniper', 'bristleback', 'pudge', 'zeus', 'shadow shaman']\n",
+      "\n",
+      "n =  26\n",
+      "x team:\t\t ['axe', 'invoker', 'monkey king', 'witch_doctor', 'lina']\n",
+      "Y actual:\t ['kunkka', 'dazzle', 'windrunner / windranger', 'pudge', 'slark']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['anti mage', 'rubick', 'invoker', 'phantom_assassin', 'earthshaker']\n",
+      "\n",
+      "n =  27\n",
+      "x team:\t\t ['anti mage', 'ogre_magi', 'monkey king', 'skeletonking/wraithking', 'witch_doctor']\n",
+      "Y actual:\t ['bristleback', 'drow_ranger', 'sniper', 'pudge', 'crystal_maiden']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['tinker', 'slark', 'lion', 'pudge', 'shadow shaman']\n",
+      "\n",
+      "n =  28\n",
+      "x team:\t\t ['invoker', 'earthshaker', 'riki', 'mirana', 'crystal_maiden']\n",
+      "Y actual:\t ['tinker', 'dazzle', 'faceless_void', 'pudge', 'ogre_magi']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['sniper', 'drow_ranger', 'skywrath_mage', 'pudge', 'lion']\n",
+      "\n",
+      "n =  29\n",
+      "x team:\t\t ['juggernaut', 'windrunner / windranger', 'legion_commander', 'shadow shaman', 'crystal_maiden']\n",
+      "Y actual:\t ['monkey king', 'drow_ranger', 'bristleback', 'lion', 'ogre_magi']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['pudge', 'drow_ranger', 'faceless_void', 'zeus', 'silencer']\n",
+      "\n",
+      "n =  30\n",
+      "x team:\t\t ['kunkka', 'monkey king', 'invoker', 'dazzle', 'lion']\n",
+      "Y actual:\t ['skywrath_mage', 'earthshaker', 'slark', 'legion_commander', 'crystal_maiden']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['tinker', 'drow_ranger', 'axe', 'lion', 'pudge']\n",
+      "\n",
+      "n =  31\n",
+      "x team:\t\t ['tinker', 'zeus', 'juggernaut', 'axe', 'silencer']\n",
+      "Y actual:\t ['faceless_void', 'anti mage', 'earthshaker', 'riki', 'ogre_magi']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['monkey king', 'legion_commander', 'pudge', 'riki', 'zeus']\n",
+      "\n",
+      "n =  32\n",
+      "x team:\t\t ['axe', 'windrunner / windranger', 'skywrath_mage', 'slark', 'rubick']\n",
+      "Y actual:\t ['tinker', 'legion_commander', 'faceless_void', 'crystal_maiden', 'pudge']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['faceless_void', 'lina', 'ogre_magi', 'mirana', 'pudge']\n",
+      "\n",
+      "n =  33\n",
+      "x team:\t\t ['anti mage', 'windrunner / windranger', 'witch_doctor', 'pudge', 'rubick']\n",
+      "Y actual:\t ['bristleback', 'drow_ranger', 'invoker', 'lina', 'crystal_maiden']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['slark', 'mirana', 'legion_commander', 'invoker', 'lion']\n",
+      "\n",
+      "n =  34\n",
+      "x team:\t\t ['sniper', 'phantom_assassin', 'earthshaker', 'invoker', 'lion']\n",
+      "Y actual:\t ['monkey king', 'axe', 'windrunner / windranger', 'pudge', 'mirana']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['lina', 'tinker', 'shadow shaman', 'legion_commander', 'pudge']\n",
+      "\n",
+      "n =  35\n",
+      "x team:\t\t ['tinker', 'phantom_assassin', 'legion_commander', 'mirana', 'crystal_maiden']\n",
+      "Y actual:\t ['slark', 'zeus', 'windrunner / windranger', 'ogre_magi', 'invoker']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['monkey king', 'zeus', 'pudge', 'lina', 'ogre_magi']\n",
+      "\n",
+      "n =  36\n",
+      "x team:\t\t ['anti mage', 'legion_commander', 'monkey king', 'dazzle', 'skywrath_mage']\n",
+      "Y actual:\t ['silencer', 'pudge', 'faceless_void', 'kunkka', 'keeper of the light']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['monkey king', 'axe', 'slark', 'shadow shaman', 'dazzle']\n",
+      "\n",
+      "n =  37\n",
+      "x team:\t\t ['faceless_void', 'lion', 'riki', 'pudge', 'rubick']\n",
+      "Y actual:\t ['kunkka', 'drow_ranger', 'mirana', 'earthshaker', 'shadow shaman']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['phantom_assassin', 'silencer', 'skeletonking/wraithking', 'lina', 'windrunner / windranger']\n",
+      "\n",
+      "n =  38\n",
+      "x team:\t\t ['sniper', 'windrunner / windranger', 'skeletonking/wraithking', 'keeper of the light', 'lion']\n",
+      "Y actual:\t ['shadow shaman', 'phantom_assassin', 'silencer', 'juggernaut', 'zeus']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['mirana', 'juggernaut', 'axe', 'invoker', 'rubick']\n",
+      "\n",
+      "n =  39\n",
+      "x team:\t\t ['slark', 'faceless_void', 'keeper of the light', 'windrunner / windranger', 'rubick']\n",
+      "Y actual:\t ['skeletonking/wraithking', 'earthshaker', 'silencer', 'pudge', 'ogre_magi']\n",
+      "FrankWolfeSSVM\n",
+      "Y predicted:\t ['pudge', 'juggernaut', 'invoker', 'rubick', 'mirana']\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "def printExample(n, X_heroes, Y_test, Y_pred, Y_pred_FW):\n",
+    "def printExample(n, X_heroes, Y_test, Y_pred_FW):\n",
     "    print(\"n = \", n)\n",
     "    print(\"x team:\\t\\t\", [id_to_hero[x] for x in X_heroes[n]])\n",
     "    print(\"Y actual:\\t\", [id_to_hero[most_popular_heroes[y]] for y in Y_test[n]])\n",
-    "    print(\"OneSlackSSVM\")\n",
-    "    print(\"Y predicted:\\t\", [id_to_hero[most_popular_heroes[y]] for y in Y_pred[n]])\n",
+    "    #print(\"OneSlackSSVM\")\n",
+    "   # print(\"Y predicted:\\t\", [id_to_hero[most_popular_heroes[y]] for y in Y_pred[n]])\n",
     "    print(\"FrankWolfeSSVM\")\n",
     "    print(\"Y predicted:\\t\", [id_to_hero[most_popular_heroes[y]] for y in Y_pred_FW[n]])\n",
     "    print()\n",
     "    \n",
-    "for n in range(20,25):\n",
-    "    printExample(n, X_heroes, Y_test, Y_pred, Y_pred_FW)"
+    "for n in range(40):\n",
+    "    printExample(n, X_heroes, Y_test, Y_pred_FW)"
    ]
   },
   {
