some code to featurize in order to build logistic regresion to evalaute if teams are better. have not tested it

--- a/BuildThatModel.ipynb
+++ b/BuildThatModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,6 +1192,195 @@
    ],
    "source": [
     "Y_pred[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Featurize for a logistic regression model to compare if a team we made is actually better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'most_popular_heroes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2a73021b9339>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnum_heroes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmost_popular_heroes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'most_popular_heroes' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "num_heroes = len(most_popular_heroes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def featurize(X, Y, filtered_matches):\n",
+    "    # first 5 sets will be our heroes\n",
+    "    # second 5 sets will be their heroes\n",
+    "    # last entry is binary for radiant of dire of Y side\n",
+    "    # Y is our heroes\n",
+    "    # a set is a hero ID one hot encoded\n",
+    "    X_featurized = []\n",
+    "    Y_did_first_team_win = []\n",
+    "    assert len(X) == len(Y)\n",
+    "    for i in range(len(X)):\n",
+    "        Y_features = []\n",
+    "        X_features = []\n",
+    "        for hero_id in Y[i]: \n",
+    "            Y_features += \\\n",
+    "                    [0 if i != most_popular_heroes.index(hero_id) else 1 for i in range(len(most_popular_heroes))]\n",
+    "        for hero_id in X[i]:\n",
+    "            X_features += \\\n",
+    "                    [0 if i != most_popular_heroes.index(hero_id) else 1 for i in range(len(most_popular_heroes))]\n",
+    "        \n",
+    "        \n",
+    "        isRadiant = filtered_matches['didRadiantWin']\n",
+    "        \n",
+    "        X_featurized.append(Y_features + X_features + [isRadiant])\n",
+    "        X_featurized.append(X_features + Y_features + [not isRadiant])\n",
+    "        Y_did_first_team_win.append(1)\n",
+    "        Y_did_first_team_win.append(0)\n",
+    "    return X_featurized, Y_did_first_team_win"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14,\n",
+       " 26,\n",
+       " 74,\n",
+       " 84,\n",
+       " 41,\n",
+       " 21,\n",
+       " 7,\n",
+       " 104,\n",
+       " 9,\n",
+       " 44,\n",
+       " 22,\n",
+       " 93,\n",
+       " 5,\n",
+       " 8,\n",
+       " 86,\n",
+       " 35,\n",
+       " 6,\n",
+       " 101,\n",
+       " 25,\n",
+       " 2,\n",
+       " 114,\n",
+       " 27,\n",
+       " 23,\n",
+       " 99,\n",
+       " 30,\n",
+       " 32,\n",
+       " 34,\n",
+       " 75,\n",
+       " 1,\n",
+       " 42,\n",
+       " 50,\n",
+       " 90,\n",
+       " 106,\n",
+       " 62,\n",
+       " 60,\n",
+       " 54,\n",
+       " 17,\n",
+       " 3,\n",
+       " 37,\n",
+       " 47,\n",
+       " 113,\n",
+       " 64,\n",
+       " 72,\n",
+       " 81]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_popular_heroes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[0 if i != most_popular_heroes.index(26) else 1 for i in range(len(most_popular_heroes))]"
    ]
   },
   {
